# sergey

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/hooks/: mercury_bot_check.py  sergey_check.py
.github/workflows/: ci.yml  publish.yml
architecture/: 01-overview.md  02-rules.md  03-technical-design.md
mercury_bot/: __init__.py  __main__.py  analyzer.py  server.py
mercury_bot/rules/: __init__.py  base.py  imports.py
sergey/: __init__.py  __main__.py  analyzer.py  config.py  server.py
sergey/rules/: __init__.py  base.py  deps.py  docs.py  imports.py  naming.py  pydantic.py  structure.py
tests/: __init__.py  test_config.py  test_server.py  test_suppression.py
tests/rules/: __init__.py  test_deps.py  test_docs.py  test_imports.py  test_naming.py  test_pydantic.py  test_structure.py
