[project]
name = "sergey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygls>=2.0.1",
    "typer>=0.24.1",
]

[project.scripts]
sergey = "sergey.__main__:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["sergey*"]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff.lint]
preview = false
select = ["ALL"]
ignore = [
    "PYI063", # Preview rule not correctly ignored.
    "SIM300", # Can cause mypy issues in SQLAlchemy where statements.
    # Recommended ignores by Astral https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "W191",   # Tab indentation
    "E111",   # Indentation with invalid multiple
    "E114",   # Indentation with invalid multiple comment
    "E117",   # Over indented
    "D206",   # Docstring tab indentation
    "D300",   # Triple single quotes
    "Q000",   # Bad quotes inline string
    "Q001",   # Bad quotes multiline string
    "Q002",   # Bad quotes docstring
    "Q003",   # Avoidable escaped quote
    "COM812", # Missing trailing comma
    "COM819", # Prohibited trailing comma
    "ISC002", # Multi-line implicit string concatenation
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts should be used in pytest
    "SLF001",  # accessing private members in tests is fine
    "INP001",  # tests should not be a module
    "ARG001",  # tests can have unused arguments (fixtures with side-effects)
    "D1",      # docstrings not required on test classes/methods
    "D2",      # docstring formatting rules not relevant in tests
    "PLR2004", # magic values in assertions are fine in tests
]
"sergey/rules/*.py" = [
    "ARG002", # `source` is part of the Rule.check() interface; not all rules use it
]
".claude/hooks/*.py" = [
    "S603",  # subprocess inputs are controlled (file paths from Claude Code)
    "S607",  # partial path for `uv` is intentional
]
"local/**/*" = ["ALL"]

[tool.ruff.format]
preview = false
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
